# Lumi-dex

./: Cargo.toml  README.md
pokedex/: Lumi Pokédex 001-151 Kanto Pokémon.txt  Lumi Pokédex 152-251 Johto Pokémon.txt  Lumi Pokédex 252-386 Hoenn Pokémon.txt  Lumi Pokédex 387-493 Sinnoh Pokémon.txt  Lumi Pokédex xxx 2.0 Add-Ons + Form Pokémon.txt
src/: backend.rs  lib.rs  main.rs  parser.rs  pokemon.rs  stats_bar.rs  typing.rs
temp.db/: 000008.sst  IDENTITY  LOG  LOG.old.1688576679648470  LOG.old.1689198646049938  MANIFEST-000014
