[package]
name = "lumi_dex"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
egui = "0.22.0"
eframe = "0.22.0"
anyhow = "1.0.70"
egui_dock = "0.6.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.9", features = ["derive"] }
image = { version = "0.24", features = ["jpeg", "png"] }
egui_extras = { version = "0.22.0", features = ["image"] }
poll-promise = { git="https://github.com/quentinLeDilavrec/poll-promise", branch="main", version = "0.2", features = ["tokio"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
surrealdb = {version = "1.0.0-beta.9",  features = ["kv-rocksdb"]}
